--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     // Your web app's Firebase configuration
     // どこのFirebaseに接続するかを指定
     const firebaseConfig = {
-      apiKey: "AIzaSyDEUYyXJM03ajuvaNZ7oY-a9T-UQIRO-2A",
+      apiKey: "",
       authDomain: "myfirstapp-31d37.firebaseapp.com",
       projectId: "myfirstapp-31d37",
       storageBucket: "myfirstapp-31d37.appspot.com",
